--- a/.gitignore
+++ b/.gitignore
@@ -294,7 +294,7 @@ modules.xml
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
